--- a/kubernetes/deploy.yml
+++ b/kubernetes/deploy.yml
@@ -1,32 +1,57 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nodejs-deployment
+  name: book-management-deployment
+  labels:
+    app: book-management
 spec:
- replicas: 2
- selector:
-   matchLabels:
-     app: nodejs-app
- template:
-   metadata:
-     labels:
-       app: nodejs-app
-   spec:
-     containers:
-     - name: nodejs-app
-       image: <DOCKERHUB_USER>/<APP_NAME>:latest
-       ports:
-       - containerPort: 8081
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: nodejs-service
-spec:
-  type: LoadBalancer
+  replicas: 1
   selector:
-    app: nodejs-app
-  ports:
-    - port: 80
-      targetPort: 8081
-      nodePort: 30001
+    matchLabels:
+      app: book-management
+  template:
+    metadata:
+      labels:
+        app: book-management
+    spec:
+      containers:
+        - name: book-management
+          image: cuongld2/fastapi-service-tekton:latest
+          imagePullPolicy: Always
+          envFrom:
+          - secretRef:
+            name: docker-secret
+          ports:
+            - containerPort: 8084
+          env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: DB_HOST
+                  optional: false
+            - name: DB_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: DB_USERNAME
+                  optional: false
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: DB_PASSWORD
+                  optional: false
+            - name: DB_PORT
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: DB_PORT
+                  optional: false
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: mysecret
+                  key: DB_NAME
+                  optional: false
