--- a/kubernetes/triggers-rbac.yaml
+++ b/kubernetes/triggers-rbac.yaml
@@ -2,11 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tekton-service-account
+  namespace: tekton
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: tekton-triggers-minimal
+  namespace: tekton
 rules:
 # EventListeners need to be able to fetch all namespaced resources
 - apiGroups: ["triggers.tekton.dev"]
@@ -32,9 +34,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: tekton-triggers-binding
+  namespace: tekton
 subjects:
 - kind: ServiceAccount
   name: tekton-service-account
+  namespace: tekton
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -44,20 +48,22 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tekton-triggers-clusterrole
+  namespace: tekton
 rules:
   # EventListeners need to be able to fetch any clustertriggerbindings
 - apiGroups: ["triggers.tekton.dev"]
-  resources: ["clustertriggerbindings", "clusterinterceptors", "interceptors"]
+  resources: ["clusterinterceptors", "interceptors"]
   verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: tekton-triggers-clusterbinding
+  namespace: tekton
 subjects:
 - kind: ServiceAccount
   name: tekton-service-account
-  namespace: default
+  namespace: tekton
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
