--- a/kubernetes/event-listener.yaml
+++ b/kubernetes/event-listener.yaml
@@ -2,6 +2,7 @@ apiVersion: triggers.tekton.dev/v1beta1
 kind: EventListener
 metadata:
   name: github-pr
+  namespace: tekton
 spec:
   serviceAccountName: tekton-service-account
   triggers:
