--- a/kubernetes/pipeline.yml
+++ b/kubernetes/pipeline.yml
@@ -2,6 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
   name: tekton-pipeline
+  namespace: tekton
 spec:
   params:
     - name: IMAGE
