--- a/kubernetes/role.yml
+++ b/kubernetes/role.yml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: tekton-pipeline-role
+  namespace: tekton
 rules:
 - apiGroups: ["extensions", "apps", ""]
   resources: ["services", "deployments", "pods","pvc","job"]
@@ -12,6 +13,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: tekton-pipeline-role-binding
+  namespace: tekton
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
