--- a/kubernetes/secret-as-environment-variable.yaml
+++ b/kubernetes/secret-as-environment-variable.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysecret
+  namespace: tekton
 type: Opaque
 data:
   DB_HOST: dnVsdHItcHJvZC02NjYzZGM5NC01YjRiLTQwNWUtOGJjYS1iNTNiYzdiYWI4NTUtdnVsdHItcHJvZC0yZDMyLnZ1bHRyZGIuY29tCg==
