--- a/kubernetes/secret-sa.yml
+++ b/kubernetes/secret-sa.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: docker-secret
+  namespace: tekton
   annotations:
     tekton.dev/docker-0: https://index.docker.io/
 type: kubernetes.io/basic-auth
