--- a/kubernetes/test-task.yml
+++ b/kubernetes/test-task.yml
@@ -3,6 +3,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: pytest-task
+  namespace: tekton
   labels:
     app.kubernetes.io/version: "0.2"
   annotations:
