--- a/kubernetes/trigger-bindings.yaml
+++ b/kubernetes/trigger-bindings.yaml
@@ -2,6 +2,7 @@ apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerBinding
 metadata:
   name: github-pr-trigger-binding
+  namespace: tekton
 spec:
   params:
   - name: revision
