--- a/kubernetes/trigger-template.yaml
+++ b/kubernetes/trigger-template.yaml
@@ -12,7 +12,7 @@ spec:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: my-pipeline-
+      generateName: tekton-pipelinerun-
     spec:
       pipelineRef:
         name: my-pipeline
