Update trigger rbac and trigger template

--- a/kubernetes/trigger-template.yaml
+++ b/kubernetes/trigger-template.yaml
@@ -8,7 +8,7 @@ spec:
   - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
-      generateName: tekton-pipelinerun-
+      generateName: tekton-pipelinerun-trigger-
     spec:
       serviceAccountName: docker-login
       pipelineRef:
