--- a/kubernetes/triggers-rbac.yaml
+++ b/kubernetes/triggers-rbac.yaml
@@ -52,7 +52,7 @@ metadata:
 rules:
   # EventListeners need to be able to fetch any clustertriggerbindings
 - apiGroups: ["triggers.tekton.dev"]
-  resources: ["clusterinterceptors", "interceptors"]
+  resources: ["clustertriggerbindings","clusterinterceptors", "interceptors"]
   verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
