--- a/kubernetes/trigger-bindings.yaml
+++ b/kubernetes/trigger-bindings.yaml
@@ -9,3 +9,5 @@ spec:
     value: main
   - name: repo-url
     value: $(body.repository.clone_url)
+  - name: contenttype
+    value: $(header.Content-Type)
